# continuous-face-zero-trust

./: .commitlintrc.js  .dockerignore  .editorconfig  .pre-commit-config.yaml  .tool-versions  Makefile  PLAN.md  README.md  SECURITY.md  biome.json  clippy.toml  counter.json  docker-compose.yml  pyproject.toml  ruff.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  quantum_experiment.yml  security_vulnerability.yml
.github/workflows/: backup.yml  blue-green.yml  canary.yml  chaos.yml  ci-docker.yml  ci-go.yml  ci-protobuf.yml  ci-python.yml  ci-robot-framework.yml  ci-rust.yml  ci-security.yml  ci-typescript.yml  ci.yml  code-quality.yml  compliance.yml  dependencies.yml  deploy-blue-green.yml  deploy-canary.yml  deploy-multi-cloud.yml  deploy-production.yml  deploy-rollback.yml  deploy-staging.yml  deploy.yml  deployment-pipeline.yml  docs.yml  feature-flags.yml  iac.yml  load-testing.yml  migrations.yml  monitoring.yml  performance-test.yml  pr-validation.yml  progressive-delivery.yml  release-please.yml  release.yml  scheduled-maintenance.yml  security-owasp.yml  security-scan.yml
benchmarks/: inference_bench.rs
deploy/istio/: destination-rules.yaml  peer-authentication.yaml  virtual-services.yaml
deploy/k8s/: kustomization.yaml
docker/: go.Dockerfile  node.Dockerfile  python.Dockerfile  quantum.Dockerfile  robot-test.Dockerfile  rust.Dockerfile
docs/: CONTRIBUTING.md
docs/api/: analytics-api.yaml  auth-api.yaml  cache-store-api.yaml  edge-gateway-api.yaml  face-ml-api.yaml  grpc-services.md  pqc-crypto-api.yaml  quantum-rng-api.yaml  vector-db-api.yaml  zk-proofs-api.yaml
docs/architecture/: ADR-001-tech-stack.md  ADR-002-quantum.md  ADR-003-pqc.md  ADR-004-zk-proofs.md  ADR-005-service-mesh.md  ADR-006-multi-cloud.md  ADR-007-testing.md  ADR-008-observability.md  data-flow.md  event-driven.md  microservices.md  multi-cloud.md  overview.md  privacy-preservation.md  quantum-integration.md  security-model.md  service-mesh.md
docs/guides/: CONTRIBUTING-UPDATED.md  adding-a-service.md  edge-deployment.md  federated-learning.md  istio-operations.md  local-dev-setup.md  multi-cloud-deploy.md  pqc-migration-guide.md  quantum-experimentation.md  robot-framework-guide.md  zk-circuit-development.md
docs/runbooks/: auth-service-down.md  backup-recovery.md  key-rotation.md  (+17 more)
pkg/python/: pyproject.toml
pkg/python/cfzt/: __init__.py  auth.py  crypto.py  errors.py  grpc_client.py  logging.py  models.py  otel.py  qdrant_client.py  redis_client.py
pkg/rust/: Cargo.toml
pkg/rust/src/: config.rs  crypto.rs  errors.rs  lib.rs
proto/: buf.gen.yaml  buf.yaml
quantum/: README.md
releases/: v1.0.0-alpha.md
scripts/: dev-setup.sh
services/auth-api/: pyproject.toml
services/auth-api/app/: config.py  dependencies.py  main.py
services/auth-api/app/core/: authenticate.py  face_verify.py  liveness_check.py  risk_engine.py  token_service.py  zk_verify.py
services/auth-api/app/middleware/: auth.py  correlation.py  otel.py  rate_limit.py  security_headers.py
services/auth-api/app/routes/: auth.py  enrollment.py  health.py  sessions.py  token.py
services/face-ml/: pyproject.toml
services/face-ml/app/: config.py  main.py
services/face-ml/app/core/: detector.py  embedder.py
services/face-ml/app/core/liveness/: anti_spoof.py  combined.py  depth_estimation.py
services/face-ml/app/core/privacy/: no_raw_store.py
services/face-ml/app/quantum/: vqc_embedder.py
services/zk-proofs/: Cargo.toml
services/zk-proofs/src/: main.rs
(+249 files in other folders)
