[project]
name = "cfzt"
version = "0.1.0"
description = "Shared library for Continuous Face Zero Trust"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "redis[hiredis]>=5.0.4",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp>=1.24.0",
  "cryptography>=42.0.0",
  "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0", "mypy>=1.10.0"]
