[project]
name = "auth-api"
version = "0.1.0"
description = "Auth API microservice"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "grpcio>=1.63.0",
  "grpcio-tools>=1.63.0",
  "redis[hiredis]>=5.0.4",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib>=1.7.4",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp>=1.24.0",
  "structlog>=24.1.0",
]
