[project]
name = "face-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0", "uvicorn[standard]>=0.29.0", "onnxruntime>=1.17.1",
  "numpy>=1.26.4", "opencv-python-headless>=4.9.0", "pillow>=10.2.0",
  "pydantic>=2.7.1", "httpx>=0.27.0", "structlog>=24.1.0",
  "qdrant-client>=1.9.0", "qiskit>=1.0.0",
]
